# shoshincollege.org

./: .envrc.example  .gitignore  README.md  manage.py  overwrite_database.sh  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  ruff.toml
.github/workflows/: check.yml  deploy.yml
ansible/: .envrc.example  inventory.yaml  playbook.yaml  shoshincollege.caddy.j2  shoshincollege.service.j2  vars.yaml
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_article.py  0003_subscription.py  0004_alter_subscription_email.py  0005_delete_subscription.py  0006_course.py  0007_alter_course_semester_key.py  0008_course_overview.py  0009_course_apply_url.py  0010_alter_course_semester_key.py
main/templates/assets/: favicon.html  style.css
main/templates/main/: about.html  archive.html  article_detail.html  article_list.html  classes.html  code_of_conduct.html  conduct.html  course_detail.html  course_list.html  courses.html  courses_2024_fall.html  courses_2025_spring.html  expectations.html  index.html  layout.html  participate.html  philosophy.html  subscribe.html  values.html
shoshincollege/: asgi.py  settings.py  urls.py  wsgi.py
